syntax = "proto3";

package eigenlayer.hourglass.v1.aggregator;

option go_package = "github.com/Layr-Labs/hourglass-monorepo/ponos/gen/protos/eigenlayer/hourglass/v1/aggregator";

import "eigenlayer/common/v1/types.proto";

// This server is implemented by the aggregator and is used to submit task results to the aggregator from the executor
service AggregatorService {
  rpc SubmitTaskResult(TaskResult) returns (eigenlayer.common.v1.SubmitAck) {}
}

// TaskResult is the message used to submit a task result to the aggregator from the executor
message TaskResult {
  string task_id = 1;
  string operator_address = 2;
  bytes output = 3;
  bytes signature = 4;
  string avs_address = 5;
}
